--- a/modules/q_and_a_dataset_generator/pyproject.toml
+++ b/modules/q_and_a_dataset_generator/pyproject.toml
@@ -2,7 +2,7 @@
 name = "src"
 version = "0.1.0"
 description = ""
-authors = ["Pau <plabartabajo@gmail.com>"]
+authors = [""]
 readme = "README.md"
 
 [tool.poetry.dependencies]
