--- a/modules/training_pipeline/pyproject.toml
+++ b/modules/training_pipeline/pyproject.toml
@@ -2,7 +2,7 @@
 name = "training_pipeline"
 version = "0.1.0"
 description = ""
-authors = ["Paul Iusztin <p.e.iusztin@gmail.com>", "Pau Labarta Bajo <plabartabajo@gmail.com>"]
+authors = [""]
 readme = "README.md"
 
 
